--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Torneo</title>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script> -->
 </head>
 
 <body>
 
+</body>
+
+</html>
+
+
+<ul>
+    <li>aaa</li>
+    <li>bbb</li>
+    <li>ccc</li>
+</ul>
+
+<h1>Titolo</h1>
+
+<h2>Sottotitolo</h2>
+
+<!-- Full Stack -->
+<p class="class-131">Lorem 131</p>
+<p class="class-132">Lorem 132</p>
+<p class="class-134">Lorem 134</p>
+<p class="class-135">Lorem 135</p>
+<p class="class-1-be">Lorem 1 BE</p>
+
+<button onclick="myFunction()">clicca</button>
+
+
+<script src="app.js"> </script>
 </body>
 
 </html>
